# ecss-parser

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  README.ru.md  SPEC.md  package.json  pnpm-lock.yaml  renovate.json  rustfmt.toml  tsconfig.json  vitest.config.mts
.github/workflows/: ci.yml
.husky/: pre-commit
__test__/: index.spec.ts
scripts/: gen-esm.mjs
src/: ast.rs  condition.rs  error.rs  lib.rs  parser.rs  tests.rs
